Fixing package.json

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "author": "Filipe \"Nelen\" Neves <me@filipeneves.net> (https://github.com/filipeneves)",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/filipeneves/DestinyAPI.js/issues"
+    "url": "https://github.com/filipeneves/bungienet.js.git"
   },
-  "homepage": "https://github.com/filipeneves/DestinyAPI.js#readme"
+  "homepage": "https://github.com/filipeneves/bungienet.js.git#readme"
 }
